@@ -3,6 +3,7 @@ knxd (0.9.2-1) unstable; urgency=medium
   * Fix knxtool packaging
   * Create "home" directory
   * Accept "local:" or "ip:" as URLs
+  * Use "knxtool list" to get a list of applets
 
  -- Matthias Urlichs <matthias@urlichs.de>  Sun, 12 Jul 2015 06:56:18 +0200
 
